force-app/main/default/objects/pcldm__Object_Masking__c/pcldm__Object_Masking__c.object-meta.xml
<CustomObject>
    <label>Object Masking</label>
    <nameField>
        <label>Object Masking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Maskings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>