force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Batch_Size__c</fullName>
    <defaultValue>500</defaultValue>
    <inlineHelpText>Batch size will determine the record count to be processed for this object under Data Masker batch.</inlineHelpText>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>