force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Configuration__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>pcldm__Configuration__c</referenceTo>
    <relationshipLabel>Object Maskings</relationshipLabel>
    <relationshipName>Object_Maskings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>