force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Count_of_Field_Masking__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Count_of_Field_Masking__c</fullName>
    <description>Shows the count of Field Masking records under the Object</description>
    <inlineHelpText>Shows the count of Field Masking records under the Object</inlineHelpText>
    <label>Count of Field Masking</label>
    <summaryForeignKey>pcldm__Field_Masking__c.pcldm__Object_Masking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>