force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Filter_Criteria__c</fullName>
    <inlineHelpText>Filter your records by entering a WHERE clause. For eg., if your SOQL is &quot;SELECT count() FROM Contact WHERE FirstName = &apos;John&apos; &quot; then you only should enter &quot; FirstName = &apos;John&apos; &quot;</inlineHelpText>
    <label>Filter Criteria</label>
    <type>TextArea</type>
</CustomField>