force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Last_Runtime__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Last_Runtime__c</fullName>
    <label>Last Runtime</label>
    <type>DateTime</type>
</CustomField>