force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>