force-app/main/default/objects/pcldm__Object_Masking__c/fields/pcldm__Serial_Mode__c.field-meta.xml
<CustomField>
    <fullName>pcldm__Serial_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to execute this masking in Serial mode. Useful for objects that may cause record locking during mass update.</inlineHelpText>
    <label>Serial Mode</label>
    <type>Checkbox</type>
</CustomField>