force-app/main/default/objects/pcldm__Object_Masking__c/recordTypes/pcldm__Delete_Records.recordType-meta.xml
<RecordType>
    <fullName>pcldm__Delete_Records</fullName>
    <active>true</active>
    <description>Use this Record type if you want to Delete the records of the Object</description>
    <label>Delete Records</label>
</RecordType>