force-app/main/default/objects/pcldm__Object_Masking__c/recordTypes/pcldm__Mask_Records.recordType-meta.xml
<RecordType>
    <fullName>pcldm__Mask_Records</fullName>
    <active>true</active>
    <description>Use this Record type if you want to Replace or Erase field values of the Object</description>
    <label>Mask Records</label>
</RecordType>